{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 48,
  "lineage": "6dd1b81f-285a-58d1-8be2-b96c1ec113d9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/networkInterfaces/Braavos-nic",
            "internal_domain_name_suffix": "azszei1pteke5bize2fxctu3rb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10/subnets/subnet1"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-0A-4E-DD",
            "name": "Braavos-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "BraavosVideos",
            "virtual_machine_id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Compute/virtualMachines/Braavos-vmt01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/networkSecurityGroups/Braavos-nsg1",
            "location": "westus",
            "name": "Braavos-nsg1",
            "resource_group_name": "BraavosVideos",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/networkSecurityGroups/Braavos-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "Braavos-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "BraavosVideos",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.1.0/24",
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "BraavosVideos",
            "virtual_network_name": "Braavos-10"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10/subnets/subnet1",
            "network_security_group_id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/networkSecurityGroups/Braavos-nsg1",
            "subnet_id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "guid": "23926506-996f-4f14-8519-270b714e9d89",
            "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10",
            "location": "westus",
            "name": "Braavos-10",
            "resource_group_name": "BraavosVideos",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/virtualNetworks/Braavos-10/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/3d50325d-5aa8-4fec-b449-8d3e59329142/resourceGroups/BraavosVideos/providers/Microsoft.Network/networkSecurityGroups/Braavos-nsg1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}